2021-04-29  Claus-Theodor Riegg (https://github.com/ctriegg-mak)

	* check_ssl_cert: match underscores in subdomains when matching name to wildcard certs

2021-04-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): adds and option to remove performance data

2021-04-23  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): Better handling of timeouts

2021-04-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (critical): Fixed the output when the CN is not available

2021-04-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): adding -starttls to the renegotiation check if needed

2021-04-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: The host name must now always match with the certificate
	* check_ssl_cert: (fetch_certificate): Fixed the errors messages (and added a new one for missing STARTTLS)

2021-03-31  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Added the --resolve option

2021-03-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: All the verbose messages are not beginning with a lowercase letter
	* check_ssl_cert: Added the possibility to have different verbose and debug levels
	* check_ssl_cert: Cleaner verbose output
	* check_ssl_cert: Short options can now be grouped

2021-03-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): Better error handling in case a TLS connection is not possible

2021-03-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (usage): adds a --all option to allow all the optional checks at the maximum level

2021-03-22  Matteo Corti  <corti@matteo.ethz.ch>

	* check_ssl_cert (fetch_certificate): detecting a timeout on the OpenSSL level

2021-03-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (openssl_version): works on systems which add a string to the OpenSSL version output (+ several fixes)

2021-03-14  Matteo Corti  <matteo@corti.li>
